feat: update MongoDB configuration and clean up unused imports in test class

--- a/mongo-test/src/main/resources/application.yml
+++ b/mongo-test/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
   data:
     mongodb:
       uri: mongodb://test_user:test_pass@localhost:27017/test_spring
+      uuid-representation: standard
 
 
   datasource:
